deleted index.js from component folder and imported components to App.js, fixed className props to be more readable, fixed style issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,19 @@
-/* * {
-    background-color: #1a202c;
+.app-container {
+    background-color:  #293448 ;
     color: white;
 }
 
-.container {
-    background-color: yellow;
-}
-.card-body {
-    background-color: #1a202c;
-    flex-direction: column;
-} */
 .nav-bar {
     background-color: #435a84;
 }
 
-.project-container {
-    display: grid;
-   
-}
-
-.card-container {
+.card-body-container {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
+    margin: 0 auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
     background-color: #32415b;
     border: 1px solid grey;
     border-radius: 5px;
@@ -33,11 +25,6 @@
     transition: transform 0.25s ease-out;
   }
   
-  .card-container:hover {
+  .card-body-container:hover {
     transform: scale(1.05);
-  }
-
-  .component-container {
-      background-color:  #293448 ;
-      color: white;
   }
